--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,15 @@
-amqp==2.6.1
+asgiref==3.3.2
 beautifulsoup4==4.9.3
-billiard==3.6.3.0
 bs4==0.0.1
-celery==4.4.7
-certifi==2020.11.8
-chardet==3.0.4
-Django==2.2.17
-django-celery-results==2.0.0
-djangorestframework==3.12.2
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.2
 fake-useragent==0.1.11
 idna==2.10
-importlib-metadata==2.1.0
-kombu==4.6.11
-pytz==2020.4
-requests==2.25.0
-soupsieve==2.0.1
+psycopg2==2.8.6
+python-dotenv==0.17.0
+pytz==2021.1
+requests==2.25.1
+soupsieve==2.2.1
 sqlparse==0.4.1
-urllib3==1.26.2
-useragent==0.1.1
-vine==1.3.0
-zipp==1.2.0
+urllib3==1.26.4
