--- a/server/main/package.json
+++ b/server/main/package.json
@@ -16,9 +16,17 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.0",
+    "mini-css-extract-plugin": "^1.4.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass-loader": "^11.0.1",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1",
+    "html-webpack-plugin": "^5.3.1"
   }
 }
